fixed sonar smells