@@ -7,7 +7,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -20,7 +19,7 @@ class RegistrationFileTest {
 		String path = "src/main/resources/META-INF/services/com.sap.cds.services.runtime.CdsRuntimeConfiguration";
 
 		BufferedReader reader = Files.newBufferedReader(Paths.get(path));
-		List<String> classes = reader.lines().collect(Collectors.toList());
+		List<String> classes = reader.lines().toList();
 		reader.close();
 
 		String runtimeRegistrationName = Registration.class.getCanonicalName();
